--- a/TrainWithBrain/app/src/main/res/values/strings.xml
+++ b/TrainWithBrain/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="title_activity_add_routine">AddRoutine</string>
     <string name="action_favorite">Home Button</string>
     <string name="action_add">Add Button</string>
-    <string name="title_activity_accordeon">Accordeon</string>
+    <string name="action_timer">Stop Watch Button</string>
+
 
     <string-array name="DaysOfWeek">
         <item>Monday</item>
@@ -15,4 +16,5 @@
         <item>Saturday</item>
         <item>Sunday</item>
     </string-array>
+    <string name="title_activity_timer">TimerActivity</string>
 </resources>
